refactor: Replace hardcoded prefecture_code with constant and remove deprecated JSON import settings